// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert does not render an error or a success message if message props is empty 1`] = `
<DocumentFragment>
  <div
    class="alert alert--error"
  />
</DocumentFragment>
`;

exports[`Alert renders a success message 1`] = `
<DocumentFragment>
  <div
    class="alert alert--error"
  >
    success
  </div>
</DocumentFragment>
`;

exports[`Alert renders an error message 1`] = `
<DocumentFragment>
  <div
    class="alert alert--error"
  >
    error
  </div>
</DocumentFragment>
`;
